--- a/actiontools4Test/src/actiontools4Test.mxml
+++ b/actiontools4Test/src/actiontools4Test.mxml
@@ -1,8 +1,40 @@
-<?xml version="1.0" encoding="utf-8"?>
-<s:WindowedApplication xmlns:fx="http://ns.adobe.com/mxml/2009" 
-					   xmlns:s="library://ns.adobe.com/flex/spark" 
-					   xmlns:mx="library://ns.adobe.com/flex/mx">
-	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
-	</fx:Declarations>
+<?xml version="1.0"?>
+<s:WindowedApplication
+	xmlns:fx="http://ns.adobe.com/mxml/2009"
+	xmlns:s="library://ns.adobe.com/flex/spark"
+  creationComplete="windowedapplication1_creationCompleteHandler(event)"
+>
+
+
+	<fx:Script>
+		<![CDATA[
+		import flexUnitTests.ConfigTests;
+
+		import mx.core.FlexGlobals;
+		import mx.events.FlexEvent;
+
+		import org.flexunit.internals.TraceListener;
+
+		import org.flexunit.runner.FlexUnitCore;
+
+		private var core:FlexUnitCore;
+
+		protected function windowedapplication1_creationCompleteHandler(event:FlexEvent):void {
+			core = new FlexUnitCore();
+			core.addListener(new TraceListener());
+			core.addEventListener(
+				FlexUnitCore.TESTS_COMPLETE,
+				function():void {
+					FlexGlobals.topLevelApplication.exit();
+				}
+			);
+			core.run(
+				//WormTests
+				ConfigTests
+			);
+		}
+		]]>
+	</fx:Script>
+
+
 </s:WindowedApplication>
